--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1",
+    "sequelize-cli": "^5.5.1"
   }
 }
