--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
-# process.env.NAME
-
 APP_URL=http://localhost:4000
 NODE_ENV=development
 
 # Database
 
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=docker
+DB_NAME=tonnage
