--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
+    "react-datepicker": "^3.1.3",
     "sequelize": "^5.21.7",
     "yup": "^0.28.4"
   },
