--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -34,7 +35,6 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
-    "react-datepicker": "^3.1.3",
     "sequelize": "^5.21.7",
     "yup": "^0.28.4"
   },
